--- a/八股文_拓展思维.md
+++ b/八股文_拓展思维.md
@@ -5,9 +5,17 @@
 ### 并发和并行
 
 - 概念上而言，**并发**是一个CPU在短时间内执行任务，这些任务不是同时发生的，例如处理大量的访问请求，从微观角度而言，每个时刻只能有一个任务；而**并行**强调的是CPU同时处理多个任务（多进程），比如某服务器同时处理用户的页面访问请求和支付请求，微观角度而言，每个时刻有多个任务，任务的数量取决于CPU的核心数。
-- 拓展方向1-高层:java高并发的数据结构实现原理，https://www.iamshuaidi.com/1023.html，https://blog.csdn.net/ahuangqingfeng/article/details/124269310性能优化
+
+- 拓展方向1-高层:java高并发的数据结构实现原理
+
+  > https://www.iamshuaidi.com/1023.html
+  >
+  > https://blog.csdn.net/ahuangqingfeng/article/details/124269310
+
 - 拓展方向2-中层:操作系统，多线程（分时复用，上下文切换）-单核性能，多进程-多核
+
 - 拓展方向3-底层:计算机架构，程序执行的本质，多级流水线，java虚拟机如何将代码编译成字节码，再如何转换成系统的指令
+
 - 拓展方向4-并行计算（cuda）
 
 ### 线程和进程
